# MOVRPDD

./: .gitignore  CMakeLists.txt  ENSGA2.hpp  GRASP.cpp  GRASP.h  Graph.cpp  Graph.h  GreedyConstructor.cpp  GreedyConstructor.h  MOVRPDD  MOVRPDD-asan  MOVRPDD-debug  Makefile  Node.cpp  Node.h  Population.cpp  Population.h  README.md  RandomConstructor.cpp  RandomConstructor.h  Route.cpp  Route.h  Solution.cpp  Solution.h  Utils.cpp  Utils.h  a.txt  exec  main.cpp  mutacoes.txt  output_160_20_0.3.txt  plot160.txt  plotSolution.py  plotTruckSolution.py  printFuncToTable.py  recurrenceTable.txt  resultados_cpu.csv  solutionForPlot.txt  teste.txt  truckSolutionForPlot.txt  (+1 more)
include/: Constructor.hpp  Crossover.hpp  ENSGA2.hpp  Graph.hpp  Mutation.hpp  Node.hpp  Population.hpp  RandomGenerator.hpp  Route.hpp  Solution.hpp  Types.hpp  Utils.hpp
input/: inst_pequena.txt
instances/: 120_20_0.3.txt  120_20_0.5.txt  120_30_0.3.txt  120_30_0.5.txt  120_30_0.7.txt  120_40_0.3.txt  120_40_0.5.txt  160_20_0.5.txt  160_30_0.3.txt  160_30_0.5.txt  160_30_0.7.txt  160_40_0.3.txt  160_40_0.5.txt  200_20_0.7.txt  200_30_0.5.txt  200_40_0.5.txt  200_40_0.7.txt  40_20_0.3.txt  40_20_0.5.txt  40_30_0.5.txt  40_40_0.3.txt  80_20_0.5.txt  80_30_0.7.txt  80_40_0.3.txt  80_40_0.5.txt  80_40_0.7.txt  inst_pequena.txt  inst_pequena.txt_solution.txt
movrpdd/: CMakeLists.txt  config.h.in
output/: solutionForPlot.txt  truckSolutionForPlot.txt
outputs/: 40_20_0.3.txt_recurrence.txt  40_20_0.5.txt_recurrence.txt
solutions/: droneSolution0_120_30_0.7.txt  droneSolution0_160_20_0.5.txt  (+65 more)
(+7847 files in other folders)
